remove MobileMenu z-index temp fix (fixed in lib)

--- a/src/css/components/MobileMenu.less
+++ b/src/css/components/MobileMenu.less
@@ -8,7 +8,7 @@
 @media @mobile-widths {
     .MobileMenu {
         display: block;
-        z-index: 5 !important;
+        //z-index: 5 !important;
     }
 
     .MobileMenu__link {
